SOJ返回扩展名

--- a/note3.JS/js.html
+++ b/note3.JS/js.html
@@ -14,6 +14,7 @@
 </head>
 <body>
     <div  class="main">
+        <p>打开控制台看结果</p>
         <div>
             <input type="text" id="rebackName" placeholder="接受文件名，返回扩展名" /><button onclick="rebackName()">确定</button>
         </div>    
