删除无用的文件

--- a/note2.JS/js.html
+++ b/note2.JS/js.html
@@ -14,13 +14,10 @@
 </head>
 <body>
     <div  class="main">
-        <p>打开控制台看结果</p>
+        <p>请打开控制台看结果吧</p>
         <div>
             <input type="text" id="rebackName" placeholder="接受文件名，返回扩展名" /><button onclick="rebackName()">确定</button>
         </div>    
-        <div>
-            <input type="text" id="#101" placeholder="解析字符串,返回：.之间子串" /><button>确定</button>
-        </div>
     </div>
 </body>
 <script>
