--- a/note2.JS/js.html
+++ b/note2.JS/js.html
@@ -5,12 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>SOJ算法</title>
-    <style>
-        .main{
-            margin: 0 auto;
-            width: 80%;
-        }
-    </style>
+    <link rel="stylesheet" href="./style.css">
 </head>
 <body>
     <div  class="main">
